--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "moment": "^2.18.1",
     "ng-dynamic-component": "^3.0.0",
     "ng2-dragula": "1.5.0",
+    "ngrx-store-localstorage": "^5.1.0",
     "ngx-clipboard": "^11.1.7",
     "ngx-infinite-scroll": "^6.0.1",
     "resize-observer-polyfill": "^1.5.0",
